Move download into service

--- a/filedownloader/filedownloader-samples/AndroidManifest.xml
+++ b/filedownloader/filedownloader-samples/AndroidManifest.xml
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".DownloadService" />
+
     </application>
 
 </manifest>
