show progressbar in notification

--- a/filedownloader/filedownloader-samples/AndroidManifest.xml
+++ b/filedownloader/filedownloader-samples/AndroidManifest.xml
@@ -26,6 +26,15 @@
 
         <service android:name=".DownloadService" />
 
+        <receiver
+            android:name=".ProgressUpdateReceiver"
+            android:label="ProgressUpdateReceiver" >
+            <intent-filter>
+                <action android:name="app.action.update_progress" />
+            </intent-filter>
+
+        </receiver>
+
     </application>
 
 </manifest>
