change TargetWidget into DownloadProgressNotificationWidget

--- a/filedownloader/filedownloader-samples/AndroidManifest.xml
+++ b/filedownloader/filedownloader-samples/AndroidManifest.xml
@@ -28,10 +28,10 @@
         <service android:name="com.mindpin.android.filedownloader.DownloadService" />
 
         <receiver
-            android:name="com.mindpin.android.filedownloader.TargetWidget"
+            android:name=".DownloadProgressNotificationWidget"
             android:label="TargetWidget" >
             <intent-filter>
-                <action android:name="app.action.target_widget" />
+                <action android:name="app.action.download_progress_notification_widget" />
             </intent-filter>
 
         </receiver>
