--- a/filedownloader/filedownloader-samples/AndroidManifest.xml
+++ b/filedownloader/filedownloader-samples/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <user-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 
 	<application
 		android:allowBackup="true"
@@ -18,12 +19,24 @@
 		android:theme="@style/AppTheme">
 
         <activity android:name=".ui.DownloadActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity android:name=".ui.TargetActivity" />
+        <activity android:name=".ui.SystemDownloadActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity android:name=".ui.EntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.TargetActivity" />
 
         <service android:name="com.mindpin.android.filedownloader.DownloadService" />
 
