--- a/filedownloader/filedownloader-samples/AndroidManifest.xml
+++ b/filedownloader/filedownloader-samples/AndroidManifest.xml
@@ -70,6 +70,15 @@
         </receiver>
 
         <receiver
+            android:name=".DownloadStopReceiver"
+            android:label="DownloadStopReceiver" >
+            <intent-filter>
+                <action android:name="app.action.download_stop_receiver" />
+            </intent-filter>
+
+        </receiver>
+
+        <receiver
             android:name=".DownloadListenerReceiver"
             android:label="DownloadListenerReceiver" >
             <intent-filter>
